# StreamConverter

./: .gitignore  README.md  pyproject.toml  setup.py
config/: example-config.py
db/: PLACEHOLDER
src/convert/: .example-env  __init__.py  applemusic.py  bot.py  example-config.py  song.py  spotify.py  ytmusic.py
