[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "Stream Converter"
license = {file = "LICENSE"}
version = "2024.12.20"

dependencies = [
  "spotipy",
  "ytmusicapi",
  "apple-music-python",
  "discord"
]
requires-python = ">=3.10"
authors = [
  { name="Jacob Humble", email="contact@jacobhumble.com" },
]
description = "A bot to convert links between music services"
readme = "README.md"
keywords = ["spotify", "apple music", "yt music", "discord"]
classifiers = [
  "License :: OSI Approved :: GNU Affero General Public License v3",
  "Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3.10",
	"Programming Language :: Python :: 3.11",
	"Programming Language :: Python :: 3.12",
	"Programming Language :: Python :: 3.13",
]

[project.urls]
Homepage = "https://github.com/JayToTheAy/StreamConverter"
Issues = "https://github.com/JayToTheAy/StreamConverter/issues"